force-app/main/default/objects/CC_Lista_Valores__c/CC_Lista_Valores__c.object-meta.xml
<CustomObject>
    <description>Lista de valores</description>
    <label>Lista de valores</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listas de valores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>