force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Activa__c.field-meta.xml
<CustomField>
    <fullName>CC_Activa__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>