force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Agente__c.field-meta.xml
<CustomField>
    <fullName>CC_Agente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check que indica si los casos se deben pasa a agente (que entren en la cola de Comentarios Apps y estado Activo), en caso contrario que queden cerrados y sin contar SLA.</description>
    <label>Entra a Agente</label>
    <type>Checkbox</type>
</CustomField>