force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Campos_SDocs__c.field-meta.xml
<CustomField>
    <fullName>CC_Campos_SDocs__c</fullName>
    <description>Lista multiple que contiene los campos posibles a seleccionar para las plantillas de SDocs.</description>
    <label>Campos SDocs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CC_All_In_One__c</fullName>
                <label>All In One</label>
            </value>
            <value>
                <fullName>CC_Bloqueo_Retencion_Saldo__c</fullName>
                <label>Bloqueo Retención Saldos</label>
            </value>
            <value>
                <fullName>CC_Cambio_Oficina__c</fullName>
                <label>Cambio de oficina</label>
            </value>
            <value>
                <fullName>CC_Cierre_Recinto_Cajero__c</fullName>
                <isActive>false</isActive>
                <label>CC_Cierre_Recinto_Cajero__c</label>
            </value>
            <value>
                <fullName>CC_Indicar_Gastos__c</fullName>
                <isActive>false</isActive>
                <label>CC_Indicar_Gastos__c</label>
            </value>
            <value>
                <fullName>CC_Informacion_Condiciones_Financiacion__c</fullName>
                <isActive>false</isActive>
                <label>CC_Informacion_Condiciones_Financiacion__c</label>
            </value>
            <value>
                <fullName>CC_Ofrecio_Soluciones_Refinanciacion__c</fullName>
                <isActive>false</isActive>
                <label>CC_Ofrecio_Soluciones_Refinanciacion__c</label>
            </value>
            <value>
                <fullName>CC_Queja_Cobro_Tarifa_Telefonica__c</fullName>
                <isActive>false</isActive>
                <label>CC_Queja_Cobro_Tarifa_Telefonica__c</label>
            </value>
            <value>
                <fullName>CC_Queja_Limpieza__c</fullName>
                <isActive>false</isActive>
                <label>CC_Queja_Limpieza__c</label>
            </value>
            <value>
                <fullName>CC_Queja_Persona_Sin_Hogar__c</fullName>
                <isActive>false</isActive>
                <label>CC_Queja_Persona_Sin_Hogar__c</label>
            </value>
            <value>
                <fullName>CC_Solicitud_Cancelacion_Contratos__c</fullName>
                <isActive>false</isActive>
                <label>CC_Solicitud_Cancelacion_Contratos__c</label>
            </value>
            <value>
                <fullName>CC_Solicitud_Info_Prestamo__c</fullName>
                <isActive>false</isActive>
                <label>CC_Solicitud_Info_Prestamo__c</label>
            </value>
            <value>
                <fullName>CC_Solicitud_Informacion_Aportar__c</fullName>
                <isActive>false</isActive>
                <label>CC_Solicitud_Informacion_Aportar__c</label>
            </value>
            <value>
                <fullName>CC_Solicitud_Informacion_Requisitos__c</fullName>
                <isActive>false</isActive>
                <label>CC_Solicitud_Informacion_Requisitos__c</label>
            </value>
            <value>
                <fullName>CC_Codigo_Prestamo__c</fullName>
                <label>Código Préstamo</label>
            </value>
            <value>
                <fullName>CC_Contacto_Cliente__c</fullName>
                <label>Contacto con el cliente</label>
            </value>
            <value>
                <fullName>CC_Contestar_Respuesta_Cliente__c</fullName>
                <label>Contestar la respuesta del cliente</label>
            </value>
            <value>
                <fullName>CC_Contrato_Tarjeta_Cliente__c</fullName>
                <label>Contrato tarjeta cliente</label>
            </value>
            <value>
                <fullName>CC_Copia_Parcial_Escritura__c</fullName>
                <label>Copia parcial escritura</label>
            </value>
            <value>
                <fullName>CC_Cuadro_Amortizacion__c</fullName>
                <label>Cuadro amortización</label>
            </value>
            <value>
                <fullName>CC_Detalle_Informacion_Enviar__c</fullName>
                <label>Detalle información a enviar</label>
            </value>
            <value>
                <fullName>CC_Documentacion_Adicional__c</fullName>
                <label>Documentación adicional</label>
            </value>
            <value>
                <fullName>CC_Documentacion_No_Localizada_Cliente__c</fullName>
                <label>Documentación no localizada (cliente)</label>
            </value>
            <value>
                <fullName>CC_Documentacion_No_Localizada__c</fullName>
                <label>Documentación no localizada (promotor)</label>
            </value>
            <value>
                <fullName>CC_Extractos_Liquidacion__c</fullName>
                <label>Extractos y/o liquidación</label>
            </value>
            <value>
                <fullName>CC_Falta_Entrega__c</fullName>
                <label>Falta Entrega</label>
            </value>
            <value>
                <fullName>CC_Fecha_Final_Calculo__c</fullName>
                <label>Fecha final del cálculo</label>
            </value>
            <value>
                <fullName>CC_Fraude__c</fullName>
                <label>Fraude</label>
            </value>
            <value>
                <fullName>CC_Hello_Letter__c</fullName>
                <label>HELLO LETTER</label>
            </value>
            <value>
                <fullName>CC_Informacion_Documentacion_Adicional__c</fullName>
                <label>Información documentación adicional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>