force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Canal_Procedencia_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Procedencia_Auditoria__c</fullName>
    <label>Canal de procedencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Canal_Procedencia</valueSetName>
    </valueSet>
</CustomField>