force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Fecha_Vigencia_Inicio__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Vigencia_Inicio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha inicio vigencia</label>
    <type>DateTime</type>
</CustomField>