force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Lista__c.field-meta.xml
<CustomField>
    <fullName>CC_Lista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>CC_Lista_Valores__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lista de valores</value>
        </filterItems>
        <filterItems>
            <field>CC_Lista_Valores__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Resoluciones</value>
        </filterItems>
        <filterItems>
            <field>CC_Lista_Valores__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Familias</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Lista_Valores__c</referenceTo>
    <relationshipLabel>Valores</relationshipLabel>
    <relationshipName>CC_Valores</relationshipName>
    <type>Lookup</type>
</CustomField>