force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_ListaPadre__c.field-meta.xml
<CustomField>
    <fullName>CC_ListaPadre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista padre</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Lista_Valores__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CC_Lista_Valores</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Lista_Valores__c</referenceTo>
    <relationshipLabel>Listas de valores hijas</relationshipLabel>
    <relationshipName>CC_ListasHijas</relationshipName>
    <type>Lookup</type>
</CustomField>