force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Llamadas_Agente_Mes_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>CC_Llamadas_Agente_Mes_Auditoria__c</fullName>
    <description>Llamadas por agente por mes</description>
    <label>Llamadas por agente y mes</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>