force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Mensajes_Mostrar__c.field-meta.xml
<CustomField>
    <fullName>CC_Mensajes_Mostrar__c</fullName>
    <description>Utilizado para mostrar mensajes largos</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mensajes a mostrar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>