force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Motivo_relacionado__c.field-meta.xml
<CustomField>
    <fullName>CC_Motivo_relacionado__c</fullName>
    <description>Campo descriptivo con el motivo del MCC el cual se relaciona con el Motivo NOK de la operativa de tarjetas</description>
    <label>Motivo relacionado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bloquear producto / servicio</fullName>
            </value>
            <value>
                <fullName>Aumento de Crédito</fullName>
            </value>
            <value>
                <fullName>Fraccionamiento</fullName>
            </value>
            <value>
                <fullName>Disposición de crédito en cuenta (ServiCash)</fullName>
            </value>
            <value>
                <fullName>Amortización / Avance de Pago</fullName>
            </value>
            <value>
                <fullName>Cambiar PIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>