force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Orden__c.field-meta.xml
<CustomField>
    <fullName>CC_Orden__c</fullName>
    <label>Orden</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>