force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CC_Servicio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Servicio</label>
    <type>TextArea</type>
</CustomField>