force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Solucion_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>CC_Solucion_Relacionada__c</fullName>
    <description>Campo descriptivo con la solución del MCC la cual se relaciona con el Motivo NOK de la operativa de tarjetas.</description>
    <label>Solución Relacionada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Derivar a Asistencia tarjetas</fullName>
            </value>
            <value>
                <fullName>Bloqueo</fullName>
            </value>
            <value>
                <fullName>CaixaBank protect emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>