force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Texto_Clasificacion_Rapida__c.field-meta.xml
<CustomField>
    <fullName>CC_Texto_Clasificacion_Rapida__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Texto clasificación rápida</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>