force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Tipo_Cliente_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Cliente_Auditoria__c</fullName>
    <description>Tipo de clientes de IZO</description>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clientes</fullName>
            </value>
            <value>
                <fullName>Oficinas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>