force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Valor__c.field-meta.xml
<CustomField>
    <fullName>CC_Valor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>