force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Valor_Amplio__c.field-meta.xml
<CustomField>
    <fullName>CC_Valor_Amplio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valor amplio</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>