force-app/main/default/objects/CC_Lista_Valores__c/fields/CC_Valor_SFDC__c.field-meta.xml
<CustomField>
    <fullName>CC_Valor_SFDC__c</fullName>
    <description>Valor traducido a Salesforce</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Valor traducido a Salesforce</inlineHelpText>
    <label>Valor SFDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>