force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_Alta_creacion__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Alta_creacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alta creación</label>
    <type>Checkbox</type>
</CustomField>