force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_Aplica_horario__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Aplica_horario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Now In Sales - Regla traspaso oportunidad usa business hours</description>
    <label>Aplica horario</label>
    <type>Checkbox</type>
</CustomField>