force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_Cola_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Cola_Oportunidad__c</fullName>
    <label>Cola asignada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSBD_CMN</fullName>
                <label>CSBD - CMN</label>
            </value>
            <value>
                <fullName>CSBD_CMB</fullName>
                <label>CSBD - CMB</label>
            </value>
            <value>
                <fullName>CSBD_Turno_contacto</fullName>
                <label>CSBD - Turno de contacto</label>
            </value>
            <value>
                <fullName>CSBD_Otras_oportunidades</fullName>
                <label>CSBD - Otras oportunidades</label>
            </value>
            <value>
                <fullName>CSBD_Hipotecas</fullName>
                <label>CSBD - Hipotecas</label>
            </value>
            <value>
                <fullName>CSBD_CSCC_Centralita</fullName>
                <label>CSBD - CSCC Centralita</label>
            </value>
            <value>
                <fullName>CSBD_CSCC</fullName>
                <label>CSBD - CSCC</label>
            </value>
            <value>
                <fullName>CSBD_CMN_CMB_Hipotecas</fullName>
                <label>CSBD - Call me hipoteca</label>
            </value>
            <value>
                <fullName>CSBD_Prestamos_I</fullName>
                <label>CSBD - Consumos I</label>
            </value>
            <value>
                <fullName>CSBD_Prestamos_II</fullName>
                <label>CSBD - Consumos II</label>
            </value>
            <value>
                <fullName>CSBD_Prestamos_III</fullName>
                <label>CSBD - Consumos III</label>
            </value>
            <value>
                <fullName>CSBD_CMN_CMB_Intouch</fullName>
                <label>CSBD - Call me Intouch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>