force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_Criterios_asignacion__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Criterios_asignacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Criterios de asignación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>