force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_Empresa_proveedora__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Empresa_proveedora__c</fullName>
    <description>Now In Sales - Regla traspaso oportunidad empresa</description>
    <label>Empresa proveedora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>imaginBank</fullName>
            </value>
            <value>
                <fullName>inTouch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>