force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_Hora_fin_turno__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Hora_fin_turno__c</fullName>
    <label>Hora fin turno</label>
    <type>Time</type>
</CustomField>