force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_Product2__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto PF</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>AV_PF</value>
        </filterItems>
        <filterItems>
            <field>Product2.AV_Nivel__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Product2.AV_ExternalID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Listas de valores</relationshipLabel>
    <relationshipName>Listas_de_valores</relationshipName>
    <type>Lookup</type>
</CustomField>