force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_Producto_MIFID__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Producto_MIFID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Producto MIFID</label>
    <type>Checkbox</type>
</CustomField>