force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_Soporte_Digital_Origen__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Soporte_Digital_Origen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Origen</label>
    <type>Url</type>
</CustomField>