force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_TablaPrecios_CategoriaTitular__c.field-meta.xml
<CustomField>
    <fullName>CSBD_TablaPrecios_CategoriaTitular__c</fullName>
    <label>Categoría del titular</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin categorizar</fullName>
                <default>true</default>
                <label>Sin categorizar</label>
            </value>
            <value>
                <fullName>Alto valor</fullName>
            </value>
            <value>
                <fullName>Alto valor +</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>