force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_TablaPrecios_Plazo__c.field-meta.xml
<CustomField>
    <fullName>CSBD_TablaPrecios_Plazo__c</fullName>
    <inlineHelpText>Corto: hasta 20 años (240 meses). Largo: más de 20 años.</inlineHelpText>
    <label>Plazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corto</fullName>
            </value>
            <value>
                <fullName>Largo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>