force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_TablaPrecios_Producto2__c.field-meta.xml
<CustomField>
    <fullName>CSBD_TablaPrecios_Producto2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>