force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_Tipo_regla__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Tipo_regla__c</fullName>
    <description>CSBD: Regla traspaso oportunidad - tipo de regla</description>
    <label>Tipo de regla</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horario</fullName>
            </value>
            <value>
                <fullName>Producto</fullName>
            </value>
            <value>
                <fullName>Tipo oportunidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>