force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_TiposOfertaJson__c.field-meta.xml
<CustomField>
    <fullName>CSBD_TiposOfertaJson__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipos de oferta JSON (interno)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>