force-app/main/default/objects/CC_Lista_Valores__c/fields/CSBD_Valor4__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Valor4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valor 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>