force-app/main/default/objects/CC_Lista_Valores__c/fields/OS_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>OS_Descripcion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>