force-app/main/default/objects/CC_Lista_Valores__c/fields/SEG_CRId__c.field-meta.xml
<CustomField>
    <fullName>SEG_CRId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Clasificación rápida asociada a la lista de valores</description>
    <inlineHelpText>Clasificación rápida asociada a la lista de valores</inlineHelpText>
    <label>Clasificación rápida</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>SEG_ClasificacionRapida__c.CBK_Negocio__c</field>
            <operation>equals</operation>
            <value>Segmentos</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SEG_ClasificacionRapida__c</referenceTo>
    <relationshipLabel>Listas de valores</relationshipLabel>
    <relationshipName>Listas_de_valores</relationshipName>
    <type>Lookup</type>
</CustomField>