force-app/main/default/objects/CC_Lista_Valores__c/recordTypes/CC_Auditoria.recordType-meta.xml
<RecordType>
    <fullName>CC_Auditoria</fullName>
    <active>true</active>
    <label>Auditoría</label>
</RecordType>