force-app/main/default/objects/CC_Lista_Valores__c/recordTypes/CC_Lista_Valores.recordType-meta.xml
<RecordType>
    <fullName>CC_Lista_Valores</fullName>
    <active>true</active>
    <label>Lista de valores</label>
</RecordType>