force-app/main/default/objects/CC_Lista_Valores__c/recordTypes/CC_Valor.recordType-meta.xml
<RecordType>
    <fullName>CC_Valor</fullName>
    <active>true</active>
    <label>Valor</label>
</RecordType>