force-app/main/default/objects/CC_Lista_Valores__c/recordTypes/CSBD_Empresas.recordType-meta.xml
<RecordType>
    <fullName>CSBD_Empresas</fullName>
    <active>true</active>
    <description>Empresas</description>
    <label>Empresas proveedoras</label>
</RecordType>