force-app/main/default/objects/CC_Lista_Valores__c/recordTypes/CSBD_Familias.recordType-meta.xml
<RecordType>
    <fullName>CSBD_Familias</fullName>
    <active>true</active>
    <description>Familias</description>
    <label>Familias</label>
</RecordType>