force-app/main/default/objects/CC_Lista_Valores__c/recordTypes/CSBD_Motivos_CSCC.recordType-meta.xml
<RecordType>
    <fullName>CSBD_Motivos_CSCC</fullName>
    <active>true</active>
    <description>Motivos CSCC</description>
    <label>Motivos CSCC</label>
</RecordType>