force-app/main/default/objects/CC_Lista_Valores__c/recordTypes/CSBD_Regla_asignacion_oportunidad.recordType-meta.xml
<RecordType>
    <fullName>CSBD_Regla_asignacion_oportunidad</fullName>
    <active>true</active>
    <label>Regla asignación oportunidad</label>
</RecordType>