force-app/main/default/objects/CC_Lista_Valores__c/recordTypes/CSBD_Regla_traspaso_oportunidad.recordType-meta.xml
<RecordType>
    <fullName>CSBD_Regla_traspaso_oportunidad</fullName>
    <active>true</active>
    <label>Regla traspaso oportunidad</label>
</RecordType>