force-app/main/default/objects/CC_Lista_Valores__c/recordTypes/CSBD_Resoluciones.recordType-meta.xml
<RecordType>
    <fullName>CSBD_Resoluciones</fullName>
    <active>true</active>
    <description>Resoluciones</description>
    <label>Resoluciones</label>
</RecordType>