force-app/main/default/objects/CC_Lista_Valores__c/recordTypes/CSBD_TablaPrecios.recordType-meta.xml
<RecordType>
    <fullName>CSBD_TablaPrecios</fullName>
    <active>true</active>
    <label>Tabla de precios CSBD</label>
</RecordType>