force-app/main/default/objects/CC_Lista_Valores__c/recordTypes/FRA_TablaEquivalenciasDerivacion_CC_FRAUDE.recordType-meta.xml
<RecordType>
    <fullName>FRA_TablaEquivalenciasDerivacion_CC_FRAUDE</fullName>
    <active>true</active>
    <description>Record Type para la creación de registros para definir las equivalencias entre el MCC de un caso de CC, y el MCC de un caso de FRAUDE</description>
    <label>Tabla equivalencias derivación CC a FRAUDE</label>
</RecordType>