force-app/main/default/objects/CC_Lista_Valores__c/validationRules/CSBD_ListaPrecios_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CSBD_ListaPrecios_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($Permission.CSBD_ByPassVR),
    RecordType.DeveloperName = &apos;CSBD_TablaPrecios&apos;,
    OR(
         ISBLANK(CSBD_TablaPrecios_Producto2__c),
         ISBLANK(TEXT(CSBD_TablaPrecios_Plazo__c)),
         ISBLANK(TEXT(CSBD_TablaPrecios_CategoriaTitular__c))
    )
)</errorConditionFormula>
    <errorMessage>Producto, plazo y categoría del titular son obligatorios.</errorMessage>
</ValidationRule>