force-app/main/default/objects/CC_Lista_Valores__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_Lista__c</columns>
    <columns>CC_Motivo_relacionado__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CC_Valor__c</columns>
    <columns>CC_Activa__c</columns>
    <columns>CC_Canal_Procedencia_Auditoria__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CC_Orden__c</columns>
    <columns>CC_Solucion_Relacionada__c</columns>
    <columns>CC_Tipo_Cliente_Auditoria__c</columns>
    <columns>CC_Valor_SFDC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Lista_Valores__c.CC_Lista_Valores</value>
    </filters>
    <label>All</label>
</ListView>