force-app/main/default/objects/CC_Lista_Valores__c/listViews/CC_Auditorias.listView-meta.xml
<ListView>
    <fullName>CC_Auditorias</fullName>
    <columns>NAME</columns>
    <columns>CC_Tipo_Cliente_Auditoria__c</columns>
    <columns>CC_Canal_Procedencia_Auditoria__c</columns>
    <columns>CC_Llamadas_Mes_Auditoria__c</columns>
    <columns>CC_Llamadas_Agente_Mes_Auditoria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Lista_Valores__c.CC_Auditoria</value>
    </filters>
    <label>Auditorías</label>
    <sharedTo>
        <group>CC_Supervisor</group>
        <role>Contact_Center</role>
        <role>Contact_Center_sin_acceso_a_Directorio</role>
    </sharedTo>
</ListView>