force-app/main/default/objects/CC_Lista_Valores__c/listViews/CC_Configuracion_SLA.listView-meta.xml
<ListView>
    <fullName>CC_Configuracion_SLA</fullName>
    <columns>CC_Lista__c</columns>
    <columns>CC_Activa__c</columns>
    <columns>NAME</columns>
    <columns>CC_Valor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_Lista__c</field>
        <operation>contains</operation>
        <value>SLA</value>
    </filters>
    <label>Configuración de SLA</label>
</ListView>